Fixed bug #6740. I happen to think that this is php_addslashes() problem, not PCRE's. When 0 is passed for the length of the string to php_addslashes() it assumes that we want to process the whole string and happily runs strlen() on it. That is bad. It should respect the length and return an empty string if it's 0.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@32688 c90b9560-bf6c-de11-be94-00142212c4b1